@@ -1,3 +1,9 @@
+2010-07-03  Charles Wilson  <libtool@cwilson.fastmail.fm>
+
+	Avoid false failures caused by filesystem interaction
+	* tests/dlloader-api.at (dlloader API): Use uglified names for
+	pseudo-modules.
+
 2010-07-03  Peter Rosin  <peda@lysator.liu.se>
 
 	Fix typo in "Add func_append_quoted and do..."
